<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="no_space_internal">no enough apace in internal storage</string>
    <string name="sim_invalid">SIM is invalid</string>
    <string name="apk_not_exist">this apk does not exist</string>
    <string name="not_support_visitor_or_user_mode">visitor or user mode does not support this feature</string>
    <string name="imsswitch">IMS APN</string>
    <string name="volte_switch">Volte Switch</string>
    <string name="volte_switch_waring">This action will restart the phone, whether or not to continue?</string>
    <string name="volteswitch">Volte Switch</string>
    <string name="traffic_class">traffic class:</string>
    <string name="Default_value">Default value</string>
    <string name="Self_defining_value">Self definit value</string>
    <string name="app_name">EngineerMode</string>
    <string name="tab_telephony">Telephony</string>
    <string name="tab_debug">Debug&amp;Log</string>
    <string name="tab_connectivity">Connectivity</string>
    <string name="tab_hardwaretest">HardWareTest</string>
    <string name="systeminfo">System Info</string>
    <string name="powerdissipation">Power Dissipation Setting</string>
    <string name="verinfo">Version Info</string>
    <string name="memory_info_and_usage">Memory Info And Usage</string>
    <string name="usage_top5_process">Usage Top 5 Process</string>
    <string name="cpu_info_and_usage">Cpu Info And Usage</string>
    <string name="cpu_usage">Cpu Usage</string>
    <string name="other_system_info_and_detail">Other System Info And Detail</string>
    <string name="thread_info">Thread Info</string>
    <string name="battery_log">Battery Log</string>
    <string name="build_number">Build Number</string>
    <string name="flash_block_info">Flash Block Info</string>
    <string name="cftresult">CFT Result</string>
    <string name="logsettings">Log Settings</string>
    <string name="it3">IT3</string>
    <string name="iot">IOT Test</string>
    <string name="pclog">PC Log</string>
    <string name="slogui">Slog UI</string>
    <string name="label_slogui">SlogUI</string>
    <string name="rdo_general_on">On</string>
    <string name="rdo_general_off">Off</string>
    <string name="rdo_general_lowpower">Silent</string>
    <string name="chk_general_switch">General switch</string>
    <string name="chk_general_android">Record Android log</string>
    <string name="chk_general_modem">Record modem log</string>
    <string name="chk_general_cp0">Record WCDMA Modem Log</string>
    <string name="chk_general_cp1">Record TD-SCDMA Log</string>
    <string name="chk_general_cp2">Record WCN Modem Log</string>
    <string name="chk_general_cp3">Record CP3 Log</string>
    <string name="txv_general_storagelocation">Log path</string>
    <string name="rdo_general_sdcard">SDCard</string>
    <string name="rdo_general_nand">Data directory</string>
    <string name="btn_general_clearlog">Clear logs in Log path</string>
    <string name="btn_general_dump">Dump log in SD</string>
    <string name="chk_general_snapsvc">Start screenshot service</string>
    <string name="chk_general_alwaysrun">Always showing the notification in status bar</string>
    <string name="chk_general_autoclear">HW watchdog</string>
    <string name="alert_request_dump_title">Request dumping log in SDCard</string>
    <string name="alert_request_dump_prompt">Need to dump logs in T-Card? Please ensure that you have chosen the SDCard in logpath.</string>
    <string name="toast_dump_filename_error">Please check your input, you can input latin-characters and numbers only.</string>
    <string name="chk_android_switch">Record Android Log</string>
    <string name="txv_android_branch">Subswitch</string>
    <string name="chk_android_kernel">Record kernel log</string>
    <string name="chk_android_system">Record system log</string>
    <string name="chk_android_main">Record main log</string>
    <string name="chk_android_event">Record event log</string>
    <string name="chk_android_radio">Record radio log</string>
    <string name="chk_modem_switch">Record modem log</string>
    <string name="chk_muti_modem_switch0">Record modem0 log</string>
    <string name="chk_muti_modem_switch1">Record modem1 log</string>
    <string name="txv_modem_other">Misc options</string>
    <string name="chk_modem_bluetooth">Record bluetooth log</string>
    <string name="chk_modem_tcp">Record cap log</string>
    <string name="chk_modem_misc">Record misc log</string>
    <string name="txv_alert_dump">Please input package name</string>
    <string name="txv_alert_clearlog">Really clear all logs?</string>
    <string name="alert_dump_title">Dump logs</string>
    <string name="alert_dump_dialog_ok">OK</string>
    <string name="alert_dump_dialog_cancel">Cancel</string>
    <string name="alert_clear_title">Clear logs</string>
    <string name="alert_clear_dialog_ok">Delete</string>
    <string name="alert_clear_dialog_cancel">Abort</string>
    <string name="alert_clear_string">Really clear all logs?</string>
    <string name="tabtag_tabhost_tabgeneral">General</string>
    <string name="tabtag_tabhost_tabandroid">Android Log</string>
    <string name="tabtag_tabhost_tabmodem">Modem and Misc</string>
    <string name="toast_receiver_failed">Failed to start Slog service</string>
    <string name="notification_slogsvc_title">SlogUI running in background</string>
    <string name="notification_slogsvc_prompt">Press to return SlogUI</string>
    <string name="notification_slogsvc_statusbarprompt">Starting SlogUI service</string>
    <string name="notification_snapsvc_title">SlogUI screenshot service</string>
    <string name="notification_snapsvc_prompt">Press here to screenshot now</string>
    <string name="notification_snapsvc_statusbarprompt">SlogUI screenshot service has begun</string>
    <string name="notification_low_storage_title">Storage volume is low</string>
    <string name="notification_low_storage_prompt">Please dump or clear logs in time</string>
    <string name="notification_low_storage_statusbar_prompt">Warning, storage volume is very low</string>
    <string name="progressdialog_tabhost_prompt">Please wait..</string>
    <string name="toast_snap_success">Screenshot successfully</string>
    <string name="toast_snap_failed">Failed to screenshot</string>
    <string name="toast_snap_prompt">Pull the statusbar, you\'ll find screenshot service, press it to snap the screen.</string>
    <string name="toast_dump_input_limited">Please check your input,and keep it less than 40.</string>
    <string name="toast_service_snap_start_failed">Failed to start snap service.</string>
    <string name="toast_service_snap_end_failed">Failed to stop snap service.</string>
    <string name="toast_service_slog_start_failed">Failed to start slog service.</string>
    <string name="toast_snap_timeout">Run slogctl screen timeout,the operation is invalid.</string>
    <string name="toast_service_slog_end_failed">Failed to stop slog service.</string>
    <string name="toast_freespace_nand">Free space in Data directory:</string>
    <string name="toast_freespace_sdcard">Free space in SDCard:</string>
    <string name="low_free_space_title">Request clean or dump logs</string>
    <string name="low_free_space_message">The free space of current logpath is low, this may effect saved logs or dumping log, please dump them or clean them in time</string>
    <string name="slog_dump_ok">Done</string>
    <string name="slog_dump_failed">Dumping long failed</string>
    <string name="slog_dump_outtime">Out of time during dumping log</string>
    <string name="menu_mode_add">Save to </string>
    <string name="menu_mode_select">Select mode</string>
    <string name="menu_mode_delete">Delete mode</string>
    <string name="dialog_button_slog_create_new_mode">Save to </string>
    <string name="dialog_button_slog_update_mode">Save to </string>
    <string name="menu_add_to">Save to </string>
    <string name="mode_dialog_add_title">Add mode</string>
    <string name="mode_dialog_delete_title">Remove mode</string>
    <string name="mode_dialog_update_title">Update to</string>
    <string name="mode_dialog_save_title">Save as</string>
    <string name="mode_dialog_select_title">Select mode</string>
    <string name="mode_dialog_duplicate_title">Duplicated mode</string>
    <string name="mode_dialog_duplicate_message">The mode name just input is duplicated, update the mode or rename instead</string>
    <string name="mode_dialog_duplicate_positive">Update</string>
    <string name="mode_dialog_duplicate_negative">Rename</string>
    <string name="slog_clear_ok">Clear done</string>
    <string name="slog_clear_failed">Failed to clear</string>
    <string name="set">SET</string>
    <string name="slog_version_info">Updated on 2013-7-11, Correct some reading functions, remove duplicate query, remove effect of child thread.</string>
    <string name="low_space_dialog_message">Current storage nearly exhausted, only %dMB is available, suggest dump log immediately.\n\nIf do nothing, the phone would be crashed because of /data volume exhausted.\n\nSlogUI Service notification has shown in StatusBar, do some actions</string>
    <string name="low_space_dialog_title">Low storage volume</string>
    <string name="low_space_dialog_option">Don\'t show again</string>
    <string name="low_space_dialog_positive">OK</string>
    <string name="low_space_dialog_negative">@string/low_space_dialog_option</string>
    <string name="modem_dsp_log_entries_values_default">0</string>
    <string name="default_apn">Default</string>
    <string name="customize">Customize</string>
    <string name="supplementary_service_query">Supplementary service query</string>
    <string name="message_retransmission">Message Retransmission</string>
    <string name="integrity_protection">Integrity Protection</string>
    <string name="automatic_startup_power">Automatic Startup Power</string>
    <string name="network_mode">Network Mode</string>
    <string name="w_prefer_plus">W Prefer Plus</string>
    <string name="lte_impede_data">LTE Data Impede</string>
    <string name="wifi_eut_channel">Channel</string>
    <string name="wifi_eut_pkt_length">Pkt length</string>
    <string name="wifi_eut_pkt_cnt">Pkt cnt</string>
    <string name="wifi_eut_powerLevel">Power level</string>
    <string name="wifi_eut_rate">Rate</string>
    <string name="wifi_eut_mode">Mode</string>
    <string name="wifi_eut_preamble">Preamble</string>
    <string name="wifi_eut_band_width">Band width</string>
    <string name="wifi_eut_guard_interval">Guard interval</string>
    <string name="wifi_tx_cw">CW</string>
    <string name="wifi_tx_go">Go</string>
    <string name="wifi_tx_stop">Stop</string>
    <string name="wifi_eut_text_rx_num">Test RX Num</string>
    <string name="wifi_eut_rx_ok">RX Ok:</string>
    <string name="wifi_eut_per">PER:</string>
    <string name="set_earphone_status">Set Earphone Status</string>
    <string name="earphone_and_extroverted_switch_title">Set Earphone And Extroverted Switch</string>
    <string name="earphone_and_extroverted_switch_start_switch">Start Switch</string>
    <string name="earphone_button_play">Earphone Play</string>
    <string name="extroverted_button_play">Extroverted Play</string>
    <string name="hash_value_not_writed">hash value not written</string>
    <string name="hash_value">hash value</string>
    <string name="root_check">root check</string>
    <string name="root_checking">root checking...</string>
    <string name="camera_id">Camera ID:</string>
    <string name="lcd_id">LCD ID:</string>
    <string name="tp_version">TP Version:</string>
    <string name="gsensor_id">GSensor ID:</string>
    <string name="lsensor_id">LSensor ID:</string>
    <string name="read_btn">Read IMEI</string>
    <string name="set_btn">Set IMEI</string>
    <string name="sim1">SIM1 IMEI</string>
    <string name="sim2">SIM2 IMEI</string>
</resources>