<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView android:layout_width="wrap_content"
        android:id="@+id/camera_id_title"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/camera_id"/>
    <TextView
        android:id="@+id/camera_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/lcd_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lcd_id"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/lcd_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/tp_version_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/tp_version"/>
    <TextView
        android:id="@+id/tp_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/gsensor_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/gsensor_id"/>
    <TextView
        android:id="@+id/gsensor_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/lsensor_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/lsensor_id"/>
    <TextView
        android:id="@+id/lsensor_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"/>
</LinearLayout>