<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sim1" />

    <EditText
        android:id="@+id/imei_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numeric="integer"
        android:phoneNumber="true"
        android:maxLength="15"
        android:singleLine="true" >
    </EditText>

    <Button
        android:id="@+id/rbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imei_edit"
        android:onClick="onClick"
        android:text="@string/read_btn" >
    </Button>


    <Button
        android:id="@+id/wbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imei_edit"
        android:onClick="onClick"
        android:text="@string/set_btn" >
    </Button>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sim2"
        android:id="@+id/sim2"/>

    <EditText
        android:id="@+id/imei_edit2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numeric="integer"
        android:phoneNumber="true"
        android:maxLength="15"        
        android:singleLine="true" >
    </EditText>

    <Button
        android:id="@+id/rbutton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imei_edit"
        android:onClick="onClick"
        android:text="@string/read_btn" >
    </Button>

    <Button
        android:id="@+id/wbutton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imei_edit"
        android:onClick="onClick"
        android:text="@string/set_btn" >
    </Button>

</LinearLayout>
